--- a/15 - Designo Multi Page Website/index.html
+++ b/15 - Designo Multi Page Website/index.html
@@ -42,14 +42,14 @@
     <section class="hero-section">
         <div class="hero-container grid grid--2-columns background-peach">
             <div class="hero-text-box hero-flow">
-                <h1 class="primary-heading">
+                <h1 class="primary-heading text-color-white">
                     Award-winning custom designs and digital branding solutions
                 </h1>
-                <p class="hero-text font-size-100 text-white">
+                <p class="hero-text font-size-100 text-color-white">
                     With over 10 years in the industry, we are experienced in creating fully responsive websites, app
                     design, and engaging brand experiences. Find out more about our services.
                 </p>
-                <button class="btn call-to-action-button font-size-100 text-black background-white uppercase">
+                <button class="btn call-to-action-button font-size-100 text-color-black background-white uppercase">
                     Learn more
                 </button>
             </div>
@@ -59,32 +59,32 @@
         </div>
     </section>
 
-    <section class="projects-section section-padding">
+    <section class="project-selection-section section-padding">
         <div class="container grid grid--2-columns">
 
-            <div class="project web-design flex flex-justify-content-center flex-align-items-center flex-direction-column flex-gap">
-                <h2 class="secondary-heading uppercase letter-spacing-1">
+            <div class="project-type web-design flex flex-justify-content-center flex-align-items-center flex-direction-column flex-gap">
+                <h2 class="secondary-heading text-color-white uppercase letter-spacing-1">
                     Web Design
                 </h2>
-                <a class="view-projects-link font-size-100 text-white uppercase text-decoration-none letter-spacing-3">
+                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-3">
                     View Projects <span class="link-symbol">&#62;</span>
                 </a>
             </div>
 
-            <div class="project app-design flex flex-justify-content-center flex-align-items-center flex-direction-column flex-gap">
-                <h2 class="secondary-heading uppercase letter-spacing-1">
+            <div class="project-type app-design flex flex-justify-content-center flex-align-items-center flex-direction-column flex-gap">
+                <h2 class="secondary-heading text-color-white uppercase letter-spacing-1">
                     App Design
                 </h2>
-                <a class="view-projects-link font-size-100 text-white uppercase text-decoration-none letter-spacing-3">
+                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-3">
                     View Projects <span class="link-symbol">&#62;</span>
                 </a>
             </div>
-            <div class="project graphic-design flex flex-justify-content-center flex-align-items-center flex-direction-column flex-gap">
-                <h2 class="secondary-heading uppercase letter-spacing-1">
+            <div class="project-type graphic-design flex flex-justify-content-center flex-align-items-center flex-direction-column flex-gap">
+                <h2 class="secondary-heading text-color-white uppercase letter-spacing-1">
                     Graphic Design
                 </h2>
 
-                <a class="view-projects-link font-size-100 text-white uppercase text-decoration-none letter-spacing-3">
+                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-3">
                     View Projects <span class="link-symbol">&#62;</span>
                 </a>
             </div>
@@ -149,10 +149,10 @@
     <section class="get-in-touch-section">
         <div class="container get-in-touch-container background-peach grid grid--2-columns">
             <div class="get-in-touch-text-box flow">
-                <h2 class="secondary-heading">
+                <h2 class="secondary-heading text-color-white">
                     Let’s talk about your project
                 </h2>
-                <p class="font-size-100 text-white">
+                <p class="font-size-100 text-color-white">
                     Ready to take it to the next level? Contact us today and find out how our expertise can help your
                     business grow.
                 </p>
@@ -173,11 +173,11 @@
 
         <nav class="footer-nav">
             <ul class="footer-nav-list list-style-none flex flex-direction-column flex-gap">
-                <li><a href="#" class="footer-nav-link text-white text-decoration-none uppercase letter-spacing-1">Our
+                <li><a href="#" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
                     company</a></li>
-                <li><a href="#" class="footer-nav-link text-white text-decoration-none uppercase letter-spacing-1">Locations</a>
+                <li><a href="#" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
                 </li>
-                <li><a href="#" class="footer-nav-link text-white text-decoration-none uppercase letter-spacing-1">Contact</a>
+                <li><a href="#" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
                 </li>
             </ul>
         </nav>
