--- a/15 - Designo Multi Page Website/web-design.html
+++ b/15 - Designo Multi Page Website/web-design.html
@@ -42,53 +42,191 @@
     <section class="hero-section">
         <div class="container project-container background-peach text-align-center flex flex-direction-column flex-justify-content-center flex-align-items-center">
             <div class="text-box-projects flow">
-                <h1 class="primary-heading">Web design</h1>
-                <p class="font-size-100 text-white"> We build websites that serve as powerful marketing tools and bring
+                <h1 class="primary-heading text-color-white">Web design</h1>
+                <p class="font-size-100 text-color-white"> We build websites that serve as powerful marketing tools and bring
                     memorable brand experiences.</p>
             </div>
         </div>
     </section>
 
-    <section class="websites-section">
+    <section class="projects-section section-padding">
         <div class="container grid grid--3-columns">
-            <div class="website">
-                <div class="image-container">
-                    <img src="Images/web-design/desktop/image-express.jpg" alt="Express website">
-                </div>
-                <div class="text-box text-align-center">
 
+            <div class="project background-very-light-peach">
+                <div class="image-container">
+                    <img src="Images/web-design/desktop/image-express.jpg" class="project-picture" alt="Express website">
                 </div>
+                <div class="project-text-box text-align-center flow">
+                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                        Express
+                    </h3>
+                    <p class="text text-color-dark-grey font-size-100">
+                        A multi-carrier shipping website for ecommerce businesses
+                    </p>
+                </div>
+            </div>
+
+            <div class="project background-very-light-peach">
+                <div class="image-container">
+                    <img src="Images/web-design/desktop/image-transfer.jpg" class="project-picture" alt="Transfer website">
+                </div>
+                <div class="project-text-box text-align-center flow">
+                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                        Transfer
+                    </h3>
+                    <p class="text text-color-dark-grey font-size-100">
+                        Site for low-cost money transfers and sending money within seconds
+                    </p>
+                </div>
+            </div>
+
+            <div class="project background-very-light-peach">
+                <div class="image-container">
+                    <img src="Images/web-design/desktop/image-photon.jpg" class="project-picture" alt="Photon website">
+                </div>
+                <div class="project-text-box text-align-center flow">
+                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                        Photon
+                    </h3>
+                    <p class="text text-color-dark-grey font-size-100">
+                        A state-of-the-art music player with high-resolution audio and DSP effects
+                    </p>
+                </div>
+            </div>
+
+            <div class="project background-very-light-peach">
+                <div class="image-container">
+                    <img src="Images/web-design/desktop/image-builder.jpg" class="project-picture" alt="Builder website">
+                </div>
+                <div class="project-text-box text-align-center flow">
+                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                        Builder
+                    </h3>
+                    <p class="text text-color-dark-grey font-size-100">
+                        Connects users with local contractors based on their location
+                    </p>
+                </div>
+            </div>
+
+            <div class="project background-very-light-peach">
+                <div class="image-container">
+                    <img src="Images/web-design/desktop/image-blogr.jpg" class="project-picture" alt="Blogger website">
+                </div>
+                <div class="project-text-box text-align-center flow">
+                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                        Blogr
+                    </h3>
+                    <p class="text text-color-dark-grey font-size-100">
+                        Blogr is a platform for creating an online blog or publication
+                    </p>
+                </div>
+            </div>
+
+            <div class="project background-very-light-peach">
+                <div class="image-container">
+                    <img src="Images/web-design/desktop/image-camp.jpg" class="project-picture" alt="Camp website">
+                </div>
+                <div class="project-text-box text-align-center flow">
+                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                        Camp
+                    </h3>
+                    <p class="text text-color-dark-grey font-size-100">
+                        Get expert training in coding, data, design, and digital marketing
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="projects-selection-section section-padding">
+        <div class="container grid grid--2-columns">
+
+            <div class="project-type app-design flex flex-justify-content-center flex-align-items-center flex-direction-column flex-gap">
+                <h2 class="secondary-heading text-color-white uppercase letter-spacing-1">
+                    App Design
+                </h2>
+                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-3">
+                    View Projects <span class="link-symbol">&#62;</span>
+                </a>
+            </div>
+            <div class="project-type graphic-design flex flex-justify-content-center flex-align-items-center flex-direction-column flex-gap">
+                <h2 class="secondary-heading text-color-white uppercase letter-spacing-1">
+                    Graphic Design
+                </h2>
+
+                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-3">
+                    View Projects <span class="link-symbol">&#62;</span>
+                </a>
             </div>
         </div>
     </section>
 </main>
-<!--  Web design-->
-<!--  We build websites that serve as powerful marketing tools and bring memorable brand experiences.-->
-<!--  -->
-<!--  Express-->
-<!--  A multi-carrier shipping website for ecommerce businesses-->
 
-<!--  Transfer-->
-<!--  Site for low-cost money transfers and sending money within seconds-->
+<footer class="footer section-padding background-black">
 
-<!--  Photon-->
-<!--  A state-of-the-art music player with high-resolution audio and DSP effects-->
+    <section class="get-in-touch-section">
+        <div class="container get-in-touch-container background-peach grid grid--2-columns">
+            <div class="get-in-touch-text-box flow">
+                <h2 class="secondary-heading text-color-white">
+                    Let’s talk about your project
+                </h2>
+                <p class="font-size-100 text-color-white">
+                    Ready to take it to the next level? Contact us today and find out how our expertise can help your
+                    business grow.
+                </p>
+            </div>
 
-<!--  Builder-->
-<!--  Connects users with local contractors based on their location-->
+            <div class="button-container grid">
+                <button class="btn get-in-touch-button uppercase">
+                    Get in Touch
+                </button>
+            </div>
+        </div>
+    </section>
 
-<!--  Blogr-->
-<!--  Blogr is a platform for creating an online blog or publication-->
+    <div class="container footer-container">
+        <div class="footer-logo-container">
+            <a class="flex flex-align-items-center flex-justify-content-center" href="#"><img src="Images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
+        </div>
 
-<!--  Camp-->
-<!--  Get expert training in coding, data, design, and digital marketing-->
+        <nav class="footer-nav">
+            <ul class="footer-nav-list list-style-none flex flex-direction-column flex-gap">
+                <li><a href="#" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
+                    company</a></li>
+                <li><a href="#" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
+                </li>
+                <li><a href="#" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
+                </li>
+            </ul>
+        </nav>
 
-<!--  App Design-->
-<!--  View Projects-->
-<!--  -->
-<!--  Graphic Design-->
-<!--  View Projects-->
+        <div class="address">
+            <p class="main-address footer-text-color text-bold">Designo Central Office</p>
+            <p class="sub-address footer-text-color">3886 Wellington Street</p>
+            <p class="sub-address footer-text-color">Toronto, Ontario M9C 3J5</p>
+        </div>
 
+        <div class="contact-us-box">
+            <p class="contact-us-heading footer-text-color text-bold">Contact Us (Central Office)</p>
+            <a class="footer-contact-link footer-text-color text-decoration-none" href="tel: +1 253-863-8967">P : +1
+                253-863-8967</a>
+            <a class="footer-contact-link footer-text-color text-decoration-none" href="contact@designo.co">M :
+                contact@designo.co</a>
+        </div>
+
+        <div class="social-logos flex flex-gap">
+            <a href="#"><ion-icon name="logo-facebook" class="social-logo"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-youtube" class="social-logo"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-twitter" class="social-logo"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-pinterest" class="social-logo"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-instagram" class="social-logo"></ion-icon></a>
+        </div>
+
+    </div>
+</footer>
+
+<div class="overlay hidden"></div>
 <script src="Javascript/script.js"></script>
 
 </body>
