--- a/15 - Designo Multi Page Website/index.html
+++ b/15 - Designo Multi Page Website/index.html
@@ -21,7 +21,7 @@
 
         <nav class="main-nav">
             <ul class="main-nav-list flex">
-                <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Our Content</a></li>
+                <li><a href="about.html" class="main-nav-link font-size-300 uppercase letter-spacing-1">Our Content</a></li>
                 <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
                 <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
             </ul>
