--- a/16 - Calculator App/index.html
+++ b/16 - Calculator App/index.html
@@ -1,15 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
-  <link rel="stylesheet" href="CSS/style.css">
-  <title>Frontend Mentor | Calculator app</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+    <link rel="stylesheet" href="CSS/style.css">
+    <title>Frontend Mentor | Calculator app</title>
 
 </head>
 <body>
+<main>
+    <section class="calculator-section">
+        <div class="container flow">
+            <header class="calculator-header  flex flex-justify-content-space-between flex-align-items-center">
+                <div class="heading-container">
+                    <h1 class="primary-heading">calc</h1>
+                </div>
+                <div class="theme-toggle-box">
+                    Theme 1
+                </div>
+            </header>
+
+            <div class="output-box border-radius-container">
+                <p class="output-text">123,3343</p>
+            </div>
+
+            <div class="buttons-box grid grid-4-columns border-radius-container">
+                <button class="number-button">7</button>
+                <button class="number-button">8</button>
+                <button class="number-button">9</button>
+                <button class="delete-button uppercase">Del</button>
+                <button class="number-button">4</button>
+                <button class="number-button">5</button>
+                <button class="number-button">6</button>
+                <button class="operator-button">+</button>
+                <button class="number-button">1</button>
+                <button class="number-button">2</button>
+                <button class="number-button">3</button>
+                <button class="operator-button">-</button>
+                <button class="operator-button">.</button>
+                <button class="number-button">0</button>
+                <button class="operator-button">/</button>
+                <button class="operator-button">x</button>
+                <button class="reset-button uppercase">Reset</button>
+                <button class="equals-button">=</button>
+            </div>
+        </div>
+    </section>
+</main>
 
 <script src="Javascript/script.js"></script>
 </body>
