--- a/16 - Calculator App/index.html
+++ b/16 - Calculator App/index.html
@@ -24,7 +24,7 @@
             </header>
 
             <div class="output-box border-radius-container">
-                <p class="output-text">123,3343</p>
+              <div class="output-text"></div>
             </div>
 
             <div class="buttons-box grid grid-4-columns border-radius-container">
