--- a/15 - Designo Multi Page Website/about.html
+++ b/15 - Designo Multi Page Website/about.html
@@ -66,6 +66,16 @@
       <p class="text font-size-100 text-color-dark-grey">
         Our team is multi-disciplinary and we are not merely interested in form — content and meaning are just as important. We give great importance to craftsmanship, service, and prompt delivery. Clients have always been impressed with our high-quality outcomes that encapsulates their brand’s story and mission.
       </p>
+    </div>
+  </div>
+</section>
+
+<section class="locations-section">
+  <div class="container grid grid--3-columns">
+    <div class="location">
+      <div class="image-container">
+        <img src="Images/shared/desktop/illustration-canada.svg" alt="Canada illustration">
+      </div>
 
     </div>
   </div>
