--- a/15 - Designo Multi Page Website/index.html
+++ b/15 - Designo Multi Page Website/index.html
@@ -22,8 +22,8 @@
         <nav class="main-nav">
             <ul class="main-nav-list flex">
                 <li><a href="about.html" class="main-nav-link font-size-300 uppercase letter-spacing-1">Our Content</a></li>
-                <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
-                <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
+                <li><a href="locations.html" class="main-nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
+                <li><a href="contact.html" class="main-nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
             </ul>
         </nav>
 
@@ -49,9 +49,9 @@
                     With over 10 years in the industry, we are experienced in creating fully responsive websites, app
                     design, and engaging brand experiences. Find out more about our services.
                 </p>
-                <button class="btn call-to-action-button font-size-100 text-color-black background-white uppercase">
+                <a href="#" class="btn-light call-to-action-button text-decoration-none font-size-100 text-color-black background-white uppercase">
                     Learn more
-                </button>
+                </a>
             </div>
             <div class="hero-image-box">
                 <img src="Images/home/desktop/image-hero-phone.png" class="hero-image" alt="hero-image">
@@ -66,7 +66,7 @@
                 <h2 class="secondary-heading text-color-white uppercase letter-spacing-1">
                     Web Design
                 </h2>
-                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-3">
+                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-2">
                     View Projects <span class="link-symbol">&#62;</span>
                 </a>
             </div>
@@ -75,7 +75,7 @@
                 <h2 class="secondary-heading text-color-white uppercase letter-spacing-1">
                     App Design
                 </h2>
-                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-3">
+                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-2">
                     View Projects <span class="link-symbol">&#62;</span>
                 </a>
             </div>
@@ -84,7 +84,7 @@
                     Graphic Design
                 </h2>
 
-                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-3">
+                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-2">
                     View Projects <span class="link-symbol">&#62;</span>
                 </a>
             </div>
@@ -98,7 +98,7 @@
                     <img src="Images/home/desktop/illustration-passionate.svg" alt="Designo advantage">
                 </div>
                 <div class="intro-text flow">
-                    <h3 class="tertiary-heading font-size-200 uppercase letter-spacing-3">
+                    <h3 class="tertiary-heading font-size-200 uppercase letter-spacing-2">
                         Passionate
                     </h3>
                     <p class="intro-text">
@@ -114,7 +114,7 @@
                     <img src="Images/home/desktop/illustration-resourceful.svg" alt="Designo advantage">
                 </div>
                 <div class="intro-text flow">
-                    <h3 class="tertiary-heading font-size-200 uppercase letter-spacing-3">
+                    <h3 class="tertiary-heading font-size-200 uppercase letter-spacing-2">
                         Resourceful
                     </h3>
                     <p class="intro-text">
@@ -130,7 +130,7 @@
                     <img src="Images/home/desktop/illustration-friendly.svg" alt="Designo advantage">
                 </div>
                 <div class="intro-text flow">
-                    <h3 class="tertiary-heading font-size-200 uppercase letter-spacing-3">
+                    <h3 class="tertiary-heading font-size-200 uppercase letter-spacing-2">
                         Friendly
                     </h3>
                     <p class="intro-text font-size-100">
@@ -159,7 +159,7 @@
             </div>
 
             <div class="button-container grid">
-                <button class="btn get-in-touch-button uppercase">
+                <button class="btn-light get-in-touch-button uppercase">
                     Get in Touch
                 </button>
             </div>
@@ -173,11 +173,11 @@
 
         <nav class="footer-nav">
             <ul class="footer-nav-list list-style-none flex flex-direction-column flex-gap">
-                <li><a href="#" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
+                <li><a href="about.html" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
                     company</a></li>
-                <li><a href="#" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
+                <li><a href="locations.html" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
                 </li>
-                <li><a href="#" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
+                <li><a href="contact.html" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
                 </li>
             </ul>
         </nav>
