--- a/15 - Designo Multi Page Website/web-design.html
+++ b/15 - Designo Multi Page Website/web-design.html
@@ -57,7 +57,7 @@
                     <img src="Images/web-design/desktop/image-express.jpg" class="project-picture" alt="Express website">
                 </div>
                 <div class="project-text-box text-align-center flow">
-                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                    <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
                         Express
                     </h3>
                     <p class="text text-color-dark-grey font-size-100">
@@ -71,7 +71,7 @@
                     <img src="Images/web-design/desktop/image-transfer.jpg" class="project-picture" alt="Transfer website">
                 </div>
                 <div class="project-text-box text-align-center flow">
-                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                    <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
                         Transfer
                     </h3>
                     <p class="text text-color-dark-grey font-size-100">
@@ -85,7 +85,7 @@
                     <img src="Images/web-design/desktop/image-photon.jpg" class="project-picture" alt="Photon website">
                 </div>
                 <div class="project-text-box text-align-center flow">
-                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                    <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
                         Photon
                     </h3>
                     <p class="text text-color-dark-grey font-size-100">
@@ -99,7 +99,7 @@
                     <img src="Images/web-design/desktop/image-builder.jpg" class="project-picture" alt="Builder website">
                 </div>
                 <div class="project-text-box text-align-center flow">
-                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                    <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
                         Builder
                     </h3>
                     <p class="text text-color-dark-grey font-size-100">
@@ -113,7 +113,7 @@
                     <img src="Images/web-design/desktop/image-blogr.jpg" class="project-picture" alt="Blogger website">
                 </div>
                 <div class="project-text-box text-align-center flow">
-                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                    <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
                         Blogr
                     </h3>
                     <p class="text text-color-dark-grey font-size-100">
@@ -127,7 +127,7 @@
                     <img src="Images/web-design/desktop/image-camp.jpg" class="project-picture" alt="Camp website">
                 </div>
                 <div class="project-text-box text-align-center flow">
-                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                    <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
                         Camp
                     </h3>
                     <p class="text text-color-dark-grey font-size-100">
@@ -146,7 +146,7 @@
                 <h2 class="secondary-heading text-color-white uppercase letter-spacing-1">
                     App Design
                 </h2>
-                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-3">
+                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-2">
                     View Projects <span class="link-symbol">&#62;</span>
                 </a>
             </div>
@@ -155,7 +155,7 @@
                     Graphic Design
                 </h2>
 
-                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-3">
+                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-2">
                     View Projects <span class="link-symbol">&#62;</span>
                 </a>
             </div>
@@ -178,7 +178,7 @@
             </div>
 
             <div class="button-container grid">
-                <button class="btn get-in-touch-button uppercase">
+                <button class="btn-light get-in-touch-button uppercase">
                     Get in Touch
                 </button>
             </div>
