--- a/15 - Designo Multi Page Website/about.html
+++ b/15 - Designo Multi Page Website/about.html
@@ -1,128 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <link rel="stylesheet" href="CSS/style.css">
-  <link rel="stylesheet" href="CSS/utility-classes.css">
-  
-  <title>Frontend Mentor | Designo Agency Website Challenge</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/utility-classes.css">
+
+    <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
 <body>
 
 <header class="main-header">
-  <div class="container header-container flex flex-justify-space-between flex-align-items-center">
-    <a href="index.html" class="logo-container">
-      <img src="Images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
-    </a>
+    <div class="container header-container flex flex-justify-space-between flex-align-items-center">
+        <a href="index.html" class="logo-container">
+            <img src="Images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
+        </a>
 
-    <nav class="main-nav">
-      <ul class="main-nav-list flex">
-        <li><a href="about.html" class="main-nav-link font-size-300 uppercase letter-spacing-1">Our Content</a></li>
-        <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
-        <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
-      </ul>
-    </nav>
+        <nav class="main-nav">
+            <ul class="main-nav-list flex">
+                <li><a href="about.html" class="main-nav-link font-size-300 uppercase letter-spacing-1">Our Content</a>
+                </li>
+                <li><a href="locations.html" class="main-nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
+                <li><a href="contact.html" class="main-nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
+            </ul>
+        </nav>
 
-    <div class="mobile-navigation">
-      <div class="mobile-navigation-button">
-        <div class="layer1"></div>
-        <div class="layer2"></div>
-        <div class="layer3"></div>
-      </div>
+        <div class="mobile-navigation">
+            <div class="mobile-navigation-button">
+                <div class="layer1"></div>
+                <div class="layer2"></div>
+                <div class="layer3"></div>
+            </div>
+        </div>
+
     </div>
-
-  </div>
 </header>
 
 <section class="hero-section">
-  <div class="container about-us-container background-peach grid">
-    <div class="image-container about-us-image-container"></div>
-    <div class="about-us-text-content hero-flow">
-      <h1 class="primary-heading text-color-white">
-        About Us
-      </h1>
-      <p class="text font-size-100 text-color-white">
-        Founded in 2010, we are a creative agency that produces lasting results for our clients. We’ve partnered with many startups, corporations, and nonprofits alike to craft designs that make real impact. We’re always looking forward to creating brands, products, and digital experiences that connect with our clients’ audiences.
-      </p>
+    <div class="container about-us-container background-peach grid">
+        <div class="image-container about-us-image-container"></div>
+        <div class="about-us-text-content hero-flow">
+            <h1 class="primary-heading text-color-white">
+                About Us
+            </h1>
+            <p class="text font-size-100 text-color-white">
+                Founded in 2010, we are a creative agency that produces lasting results for our clients. We’ve partnered
+                with many startups, corporations, and nonprofits alike to craft designs that make real impact. We’re
+                always looking forward to creating brands, products, and digital experiences that connect with our
+                clients’ audiences.
+            </p>
+        </div>
     </div>
-  </div>
 </section>
 
 <section class="talent-section section-padding">
-  <div class="container about-us-container background-very-light-peach grid">
-    <div class="image-container about-us-image-container"></div>
-    <div class="about-us-text-content hero-flow">
-      <h1 class="secondary-heading text-color-peach">
-        World-class talent
-      </h1>
-      <p class="text font-size-100 text-color-dark-grey">
-        We are a crew of strategists, problem-solvers, and technologists. Every design is thoughtfully crafted from concept to launch, ensuring success in its given market. We are constantly updating our skills in a myriad of platforms.
-      </p>
-      <p class="text font-size-100 text-color-dark-grey">
-        Our team is multi-disciplinary and we are not merely interested in form — content and meaning are just as important. We give great importance to craftsmanship, service, and prompt delivery. Clients have always been impressed with our high-quality outcomes that encapsulates their brand’s story and mission.
-      </p>
+    <div class="container about-us-container background-very-light-peach grid">
+        <div class="image-container about-us-image-container"></div>
+        <div class="about-us-text-content hero-flow">
+            <h1 class="secondary-heading text-color-peach">
+                World-class talent
+            </h1>
+            <p class="text font-size-100 text-color-dark-grey">
+                We are a crew of strategists, problem-solvers, and technologists. Every design is thoughtfully crafted
+                from concept to launch, ensuring success in its given market. We are constantly updating our skills in a
+                myriad of platforms.
+            </p>
+            <p class="text font-size-100 text-color-dark-grey">
+                Our team is multi-disciplinary and we are not merely interested in form — content and meaning are just
+                as important. We give great importance to craftsmanship, service, and prompt delivery. Clients have
+                always been impressed with our high-quality outcomes that encapsulates their brand’s story and mission.
+            </p>
+        </div>
     </div>
-  </div>
 </section>
 
-<section class="locations-section">
-  <div class="container grid grid--3-columns">
-    <div class="location">
-      <div class="image-container">
-        <img src="Images/shared/desktop/illustration-canada.svg" alt="Canada illustration">
-      </div>
+<section class="locations-section section-padding">
+
+    <div class="container grid grid--3-columns">
+
+        <div class="location flex flex-direction-column flex-align-items-center">
+            <div class="image-container">
+                <img src="Images/shared/desktop/illustration-canada.svg" alt="Canada illustration">
+            </div>
+            <div class="text-box grid grid-place-items-center text-align-center">
+                <h3 class="tertiary-heading text-color-dark-grey uppercase letter-spacing-2">
+                    Canada
+                </h3>
+                <a href="#" class="btn-dark see-location-button uppercase text-decoration-none">
+                    See Location
+                </a>
+            </div>
+        </div>
+
+        <div class="location flex flex-direction-column flex-align-items-center">
+            <div class="image-container">
+                <img src="Images/shared/desktop/illustration-australia.svg" alt="Australia illustration">
+            </div>
+            <div class="text-box grid grid-place-items-center text-align-center">
+                <h3 class="tertiary-heading text-color-dark-grey uppercase letter-spacing-2">
+                    Australia
+                </h3>
+                <a href="#" class="btn-dark see-location-button uppercase text-decoration-none">
+                    See Location
+                </a>
+            </div>
+        </div>
+
+        <div class="location flex flex-direction-column flex-align-items-center">
+            <div class="image-container">
+                <img src="Images/shared/desktop/illustration-united-kingdom.svg" alt="United Kingdom illustration">
+            </div>
+            <div class="text-box grid grid-place-items-center text-align-center">
+                <h3 class="tertiary-heading text-color-dark-grey uppercase letter-spacing-2">
+                    United Kingdom
+                </h3>
+                <a href="#" class="btn-dark see-location-button uppercase text-decoration-none">
+                    See Location
+                </a>
+            </div>
+        </div>
 
     </div>
-  </div>
 </section>
 
-<!--  -->
-<!--  We are a crew of strategists, problem-solvers, and technologists. Every design is thoughtfully -->
-<!--  crafted from concept to launch, ensuring success in its given market. We are constantly updating -->
-<!--  our skills in a myriad of platforms.-->
+<section class="deal-section section-padding">
+    <div class="container about-us-container grid background-very-light-peach">
+        <div class="image-container about-us-image-container"></div>
+        <div class="about-us-text-content hero-flow">
+            <h1 class="secondary-heading text-color-peach">
+                The real deal
+            </h1>
+            <p class="text font-size-100 text-color-dark-grey">
+                As strategic partners in our clients’ businesses, we are ready to take on any challenge as our own. Solving real problems require empathy and collaboration, and we strive to bring a fresh perspective to every opportunity. We make design and technology more accessible and give you tools to measure success.
+            </p>
+            <p class="text font-size-100 text-color-dark-grey">
+                We are visual storytellers in appealing and captivating ways. By combining business and marketing strategies, we inspire audiences to take action and drive real results.
+            </p>
+        </div>
+    </div>
+</section>
 
-<!--  Our team is multi-disciplinary and we are not merely interested in form — content and meaning -->
-<!--  are just as important. We give great importance to craftsmanship, service, and prompt delivery. -->
-<!--  Clients have always been impressed with our high-quality outcomes that encapsulates their -->
-<!--  brand’s story and mission.-->
+<footer class="footer section-padding background-black">
 
-<!--  The real deal-->
-<!--  As strategic partners in our clients’ businesses, we are ready to take on any challenge as our own.-->
-<!--  Solving real problems require empathy and collaboration, and we strive to bring a fresh perspective to every-->
-<!--  opportunity. We make design and technology more accessible and give you tools to measure success.-->
+    <section class="get-in-touch-section">
+        <div class="container get-in-touch-container background-peach grid grid--2-columns">
+            <div class="get-in-touch-text-box flow">
+                <h2 class="secondary-heading text-color-white">
+                    Let’s talk about your project
+                </h2>
+                <p class="font-size-100 text-color-white">
+                    Ready to take it to the next level? Contact us today and find out how our expertise can help your
+                    business grow.
+                </p>
+            </div>
 
-<!--  We are visual storytellers in appealing and captivating ways. By combining business and marketing strategies, -->
-<!--  we inspire audiences to take action and drive real results.-->
+            <div class="button-container grid">
+                <button class="btn-light get-in-touch-button uppercase">
+                    Get in Touch
+                </button>
+            </div>
+        </div>
+    </section>
 
-<!--  Canada-->
-<!--  See location-->
+    <div class="container footer-container">
+        <div class="footer-logo-container">
+            <a class="flex flex-align-items-center flex-justify-content-center" href="#"><img src="Images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
+        </div>
 
-<!--  Australia-->
-<!--  See location-->
+        <nav class="footer-nav">
+            <ul class="footer-nav-list list-style-none flex flex-direction-column flex-gap">
+                <li><a href="about.html" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
+                    company</a></li>
+                <li><a href="locations.html" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
+                </li>
+                <li><a href="contact.html" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
+                </li>
+            </ul>
+        </nav>
 
-<!--  United Kingdom-->
-<!--  See location-->
+        <div class="address">
+            <p class="main-address footer-text-color text-bold">Designo Central Office</p>
+            <p class="sub-address footer-text-color">3886 Wellington Street</p>
+            <p class="sub-address footer-text-color">Toronto, Ontario M9C 3J5</p>
+        </div>
 
-<!--  Let’s talk about your project-->
-<!--  Ready to take it to the next level? Contact us today and find out how our expertise can -->
-<!--  help your business grow.-->
-<!--  Get in touch-->
+        <div class="contact-us-box">
+            <p class="contact-us-heading footer-text-color text-bold">Contact Us (Central Office)</p>
+            <a class="footer-contact-link footer-text-color text-decoration-none" href="tel: +1 253-863-8967">P : +1
+                253-863-8967</a>
+            <a class="footer-contact-link footer-text-color text-decoration-none" href="contact@designo.co">M :
+                contact@designo.co</a>
+        </div>
 
-<!--  Our company-->
-<!--  Locations-->
-<!--  Contact-->
+        <div class="social-logos flex flex-gap">
+            <a href="#"><ion-icon name="logo-facebook" class="social-logo"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-youtube" class="social-logo"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-twitter" class="social-logo"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-pinterest" class="social-logo"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-instagram" class="social-logo"></ion-icon></a>
+        </div>
 
-<!--  Designo Central Office-->
-<!--  3886 Wellington Street-->
-<!--  Toronto, Ontario M9C 3J5-->
+    </div>
+</footer>
 
-<!--  Contact Us (Central Office)-->
-<!--  P : +1 253-863-8967-->
-<!--  M : contact@designo.co-->
+<div class="overlay hidden"></div>
+<script src="Javascript/script.js"></script>
+
 </body>
 </html>
