--- a/15 - Designo Multi Page Website/app-design.html
+++ b/15 - Designo Multi Page Website/app-design.html
@@ -21,9 +21,9 @@
 
         <nav class="main-nav">
             <ul class="main-nav-list flex">
-                <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Our Content</a></li>
-                <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
-                <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
+                <li><a href="about.html" class="main-nav-link font-size-300 uppercase letter-spacing-1">Our Content</a></li>
+                <li><a href="locations.html" class="main-nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
+                <li><a href="contact.html" class="main-nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
             </ul>
         </nav>
 
@@ -58,7 +58,7 @@
                          alt="Airfilter app">
                 </div>
                 <div class="project-text-box text-align-center flow">
-                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                    <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
                         Airfilter
                     </h3>
                     <p class="text text-color-dark-grey font-size-100">
@@ -73,7 +73,7 @@
                          alt="Eyecam App">
                 </div>
                 <div class="project-text-box text-align-center flow">
-                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                    <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
                         Eyecam
                     </h3>
                     <p class="text text-color-dark-grey font-size-100">
@@ -88,7 +88,7 @@
                          alt="Faceit App">
                 </div>
                 <div class="project-text-box text-align-center flow">
-                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                    <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
                         Faceit
                     </h3>
                     <p class="text text-color-dark-grey font-size-100">
@@ -104,7 +104,7 @@
                          alt="Todo App">
                 </div>
                 <div class="project-text-box text-align-center flow">
-                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                    <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
                         Todo
                     </h3>
                     <p class="text text-color-dark-grey font-size-100">
@@ -119,7 +119,7 @@
                          alt="Loopstudios App">
                 </div>
                 <div class="project-text-box text-align-center flow">
-                    <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+                    <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
                         Loopstudios
                     </h3>
                     <p class="text text-color-dark-grey font-size-100">
@@ -138,7 +138,7 @@
                 <h2 class="secondary-heading text-color-white uppercase letter-spacing-1">
                     Web Design
                 </h2>
-                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-3">
+                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-2">
                     View Projects <span class="link-symbol">&#62;</span>
                 </a>
             </div>
@@ -148,7 +148,7 @@
                     Graphic Design
                 </h2>
 
-                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-3">
+                <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-2">
                     View Projects <span class="link-symbol">&#62;</span>
                 </a>
             </div>
@@ -170,7 +170,7 @@
             </div>
 
             <div class="button-container grid">
-                <button class="btn get-in-touch-button uppercase">
+                <button class="btn-light get-in-touch-button uppercase">
                     Get in Touch
                 </button>
             </div>
@@ -184,11 +184,11 @@
 
         <nav class="footer-nav">
             <ul class="footer-nav-list list-style-none flex flex-direction-column flex-gap">
-                <li><a href="#" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
+                <li><a href="about.html" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
                     company</a></li>
-                <li><a href="#" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
+                <li><a href="locations.html" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
                 </li>
-                <li><a href="#" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
+                <li><a href="contact.html" class="footer-nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
                 </li>
             </ul>
         </nav>
