--- a/15 - Designo Multi Page Website/graphic-design.html
+++ b/15 - Designo Multi Page Website/graphic-design.html
@@ -57,7 +57,7 @@
                alt="Timbrown book">
         </div>
         <div class="project-text-box text-align-center flow">
-          <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+          <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
             Tim Brown
           </h3>
           <p class="text text-color-dark-grey font-size-100">
@@ -72,7 +72,7 @@
                alt="Boxed Water">
         </div>
         <div class="project-text-box text-align-center flow">
-          <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+          <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
             Boxed water
           </h3>
           <p class="text text-color-dark-grey font-size-100">
@@ -87,7 +87,7 @@
                alt="Science image">
         </div>
         <div class="project-text-box text-align-center flow">
-          <h3 class="tertiary-heading uppercase letter-spacing-3 text-color-peach">
+          <h3 class="tertiary-heading uppercase letter-spacing-2 text-color-peach">
             Science!
           </h3>
           <p class="text text-color-dark-grey font-size-100">
@@ -106,7 +106,7 @@
         <h2 class="secondary-heading text-color-white uppercase letter-spacing-1">
           Web Design
         </h2>
-        <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-3">
+        <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-2">
           View Projects <span class="link-symbol">&#62;</span>
         </a>
       </div>
@@ -115,7 +115,7 @@
         <h2 class="secondary-heading text-color-white uppercase letter-spacing-1">
           App Design
         </h2>
-        <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-3">
+        <a class="view-projects-link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-2">
           View Projects <span class="link-symbol">&#62;</span>
         </a>
       </div>
@@ -138,7 +138,7 @@
       </div>
 
       <div class="button-container grid">
-        <button class="btn get-in-touch-button uppercase">
+        <button class="btn-light get-in-touch-button uppercase">
           Get in Touch
         </button>
       </div>
